<resources>
    <string name="app_name">PetsApp</string>
    <string name="ingrese_sus_nombres">Ingrese sus nombres</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_una_contrase_a">Ingrese una contraseña</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registrar_mascota">REGISTRAR MASCOTA</string>
    <string name="ingrese_la_edad_de_su_mascota">Ingrese la edad de su mascota</string>
    <string name="ingrese_la_raza_de_su_mascota">Ingrese la raza de su mascota</string>
    <string name="ingrese_el_nombre_de_su_mascota">Ingrese el nombre de su mascota</string>
    <string name="bienvenido">Bienvenido usuario</string>
    <string name="mis_mascotas">Mis mascotas</string>
</resources>
