<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterUserActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginBottom="20dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
        <ProgressBar
            android:id="@+id/progressbarRegister"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="gone"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="250dp"/>
        <LinearLayout
            android:id="@+id/contentRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/inputNombreRegister"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="7dp"
                    android:textSize="16sp"
                    android:hint="@string/ingrese_sus_nombres"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/inputCorreo"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="7dp"
                    android:textSize="16sp"
                    android:hint="@string/ingrese_su_correo"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/inputContraseñaRegister"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:drawableStart="@drawable/ic_https_black_24dp"
                    android:drawablePadding="7dp"
                    android:textSize="16sp"
                    android:hint="@string/ingrese_una_contrase_a"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButtonUser"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="callRegister"
                />

        </LinearLayout>
    </LinearLayout>

    </ScrollView>


</LinearLayout>